quizapp-last push

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="screen-active" id="start-screen">
+        <div class="screen active" id="start-screen">
             <h1>Quiz Time</h1>
             <p>Test your knowledge with these fun questions</p>
             <button id="start-btn">Lets get started!!</button>
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div id="answer-container" class="answer-container"></div>
+        <div id="answers-container" class="answers-container"></div>
         <!-- Answers button shall be inserted dynamically -->
          <div class="progress-bar">
             <div id="progress" class="progress"></div>
@@ -41,5 +41,6 @@
         </div>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
